[package]
name = "bevy_jpeg2k"
version = "0.10.1"
authors = ["Robert G. Jakabosky <rjakabosky+neopallium@neoawareness.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
description = "JPEG 2000 image loader for Bevy."
keywords = ["j2k", "jp2", "jpeg2000", "bevy"]
repository = "https://github.com/Neopallium/bevy_jpeg2k"
homepage = "https://github.com/Neopallium/bevy_jpeg2k"

[features]
default = [ "openjpeg-sys", "threads" ]

openjpeg-sys = [ "jpeg2k/openjpeg-sys" ]
openjp2 = [ "jpeg2k/openjp2" ]
threads = [ "jpeg2k/threads" ]

[dependencies]
anyhow = "1.0"

jpeg2k = { version = "0.6", default-features = false }

bevy_app = { version = "0.10", default-features = false }
bevy_asset = { version = "0.10", default-features = false }
bevy_render = { version = "0.10", default-features = false }
wgpu = "0.15"

[dev-dependencies]
bevy = "0.10"
